Fix overflow

--- a/site/_note.scss
+++ b/site/_note.scss
@@ -142,6 +142,7 @@
     resize: none;
     white-space: pre-wrap;
     width: 100%;
+    overflow-x:hidden;
 
     &.edit {
       background-color: $note_input_background;
